# media-metadata-dataset

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.woodpecker/: ci.yml
corpus/: bootstrap-anime-manami-v1.jsonl  bootstrap-concept-romance-college-v1.jsonl  bootstrap-concept-romance-college-v1.slice-manifest.json  bootstrap-death-note-v1.jsonl  bootstrap-death-note-v1.slice-manifest.json  bootstrap-designated-survivor-v1.jsonl  bootstrap-designated-survivor-v1.slice-manifest.json  bootstrap-ghost-in-the-shell-v1.jsonl  bootstrap-ghost-in-the-shell-v1.slice-manifest.json  bootstrap-screen-v1.jsonl  bootstrap-screen-v1.slice-manifest.json
docs/: backlog.jsonl  benchmark-architecture.md  consumer-examples.md  dataset-surfaces.md  decisions.jsonl  hugging-face-dataset-card-plan.md  model-selection.md  problem-statement.md  schema-documentation.md  source-admissibility-and-rate-limits.md  source-signal-showcases.md
scripts/: benchmark_gemini_embeddings.py  benchmark_gemini_free.py  benchmark_ollama_local.py  benchmark_openai_compat_local.py  benchmark_openrouter_free.py  benchmark_z_ai_glm.py  rerank_llm_benchmarks.py
tests/: test_anilist_concept_search.py  test_anilist_enrichment.py  test_anilist_http.py  test_anilist_metadata_enrichment.py  test_backlog.py  test_benchmark_contracts.py  test_benchmark_fixtures.py  test_bootstrap_artifact.py  test_build_anime.py  test_concept_corpus_slice.py  test_corpus_concept_search.py  test_corpus_slice_manifests.py  test_death_note_bootstrap.py  test_decision_log.py  (+26 more)
(+68 files in other folders)
