[project]
name = "media-metadata-dataset"
version = "0.1.0"
description = "Container-first dataset compiler for open media discovery datasets."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "alexcatdad" }]
dependencies = [
  "datasets>=2.21.0",
  "duckdb>=1.1.0",
  "httpx>=0.27.0",
  "huggingface-hub>=0.24.0",
  "openai>=1.40.0",
  "orjson>=3.10.0",
  "polars>=1.5.0",
  "pyarrow>=17.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "tenacity>=8.5.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=3.0.0",
]
dev = [
  "pyright>=1.1.390",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "ruff>=0.8.0",
]

[project.scripts]
mod = "media_offline_database.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/media_offline_database"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "ARG",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "PTH",
  "RUF",
  "SIM",
  "TID",
  "UP",
]
ignore = [
  "E501",
  "TRY003",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
